@@ -15,7 +15,7 @@ class RDoc::Include < RDoc::CodeObject
     super()
     @name = name
     self.comment = comment
-    @module = nil   # cache for module if found
+    @module = nil # cache for module if found
   end
 
   ##
@@ -28,9 +28,10 @@ class RDoc::Include < RDoc::CodeObject
   end
 
   def == other # :nodoc:
-    self.class == other.class and
-      self.name == other.name
+    self.class === other and @name == other.name
   end
+
+  alias eql? ==
 
   ##
   # Full name based on #module
@@ -38,6 +39,10 @@ class RDoc::Include < RDoc::CodeObject
   def full_name
     m = self.module
     RDoc::ClassModule === m ? m.full_name : @name
+  end
+
+  def hash # :nodoc:
+    [@name, self.module].hash
   end
 
   def inspect # :nodoc:
@@ -57,6 +62,13 @@ class RDoc::Include < RDoc::CodeObject
   # - if not found, look into the children of included modules,
   #   in reverse inclusion order;
   # - if still not found, go up the hierarchy of names.
+  #
+  # This method has <code>O(n!)</code> behavior when the module calling
+  # include is referencing nonexistent modules.  Avoid calling #module until
+  # after all the files are parsed.  This behavior is due to ruby's constant
+  # lookup behavior.
+  #
+  # As of the beginning of October, 2011, no gem includes nonexistent modules.
 
   def module
     return @module if @module
