@@ -183,16 +183,6 @@ class TestRDocContext < XrefTestCase
     assert_equal [incl], @context.includes
   end
 
-  def test_add_include_twice
-    incl1 = RDoc::Include.new 'Name', 'comment'
-    @context.add_include incl1
-
-    incl2 = RDoc::Include.new 'Name', 'comment'
-    @context.add_include incl2
-
-    assert_equal [incl1], @context.includes
-  end
-
   def test_add_method
     meth = RDoc::AnyMethod.new nil, 'old_name'
     meth.visibility = nil
@@ -332,6 +322,16 @@ class TestRDocContext < XrefTestCase
     @context.add_to arr, incl
 
     refute_includes arr, incl
+  end
+
+  def bench_add_include
+    cm = RDoc::ClassModule.new 'Klass'
+
+    assert_performance_linear 0.9 do |count|
+      count.times do |i|
+        cm.add_include RDoc::Include.new("N::M#{i}", nil)
+      end
+    end
   end
 
   def test_child_name
